@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Factorise wand charge draining code.
+ include/sproto.h
+ server/monster.c player.c spell_util.c
+Nicolas Weeger 2007-12-15
+
 Real path-finding algorithm for monsters. Pretty basic, but works for now.
  server/monster.c
 Nicolas Weeger 2007-12-10
